@@ -3,20 +3,30 @@ package com.ford.syncV4.proxy.rpc.enums;
 public enum VehicleDataType {
 	VEHICLEDATA_GPS,
 	VEHICLEDATA_SPEED,
+    VEHICLEDATA_RPM,
 	VEHICLEDATA_FUELLEVEL,
-	VEHICLEDATA_FUELECONOMY,
-	VEHICLEDATA_ENGINERPM,
-	VEHICLEDATA_BATTVOLTS,
-	VEHICLEDATA_RAINSENSOR,
-	VEHICLEDATA_ODOMETER,
-	VEHICLEDATA_VIN,
-	VEHICLEDATA_EXTERNTEMP,
-	VEHICLEDATA_PRNDLSTATUS,
-	VEHICLEDATA_TIREPRESSURE,
-	VEHICLEDATA_BATTERYPACKVOLTAGE,
-	VEHICLEDATA_BATTERYCURRENT,
-	VEHICLEDATA_BATTERYTEMPERATURE,
-	VEHICLEDATA_SATESN;
+	VEHICLEDATA_FUELLEVEL_STATE,
+	VEHICLEDATA_INSTANTFUELCONSUMPTION,
+    VEHICLEDATA_EXTERNTEMP,
+    VEHICLEDATA_PRNDLSTATUS,
+    VEHICLEDATA_TIREPRESSURE,
+    VEHICLEDATA_ODOMETER,
+    VEHICLEDATA_BELTSTATUS,
+    VEHICLEDATA_BODYINFORMATION,
+    VEHICLEDATA_DEVICESTATUS,
+    VEHICLEDATA_DRIVERBRAKING,
+    VEHICLEDATA_WIPERSTATUS,
+    VEHICLEDATA_HEADLAMPSTATUS,
+    VEHICLEDATA_ENGINETORQUE,
+    VEHICLEDATA_ACCPEDALPOSITION,
+    VEHICLEDATA_STEERINGWHEELANGLE,
+
+    /* Ford Specific Data Items */
+	VEHICLEDATA_ECALLINFO,
+	VEHICLEDATA_AIRBAGSTATUS,
+	VEHICLEDATA_EMERGENCYEVENT,
+	VEHICLEDATA_CLUSTERMODESTATUS,
+	VEHICLEDATA_MYKEY;
 
     public static VehicleDataType valueForString(String value) {
         return valueOf(value);
